--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,10 +1,13 @@
 {
   "current": {
     "layout_style": "normal",
+    "box_width": "1310",
     "section_heading_1_size": 22,
     "top-information-bar": false,
+    "enable_wishlist": false,
     "wishlist_page": "wishlist",
     "enable_site_animation": false,
+    "enable_search": false,
     "en_searchwords": true,
     "show_product_review": true,
     "show_reviewgrid": true,
@@ -16,6 +19,7 @@
     "free_ship_msg": "Spent $ more for free shipping",
     "got_free_ship": "You have got <b>FREE SHIPPING<\/b>",
     "enable_birthdate": true,
+    "fonts": "2",
     "body_font": "poppins_n4",
     "header_font": "poppins_n4",
     "type_base_size": 13,
@@ -29,6 +33,7 @@
     "type_header_letter_space": 2,
     "color_text_field": "#fff",
     "field_bd": "#dddddd",
+    "btncase": "none",
     "btn_style": "flat",
     "color_button": "#000",
     "btn1_bd": "rgba(0,0,0,0)",
@@ -47,7 +52,7 @@
     "bdr_btn_2_text_hov": "#fff",
     "bdr_btn_2_hov": "#F67280",
     "link_btn_txt": "#f67280",
-    "navigation_font_size": 13,
+    "navigation_font_size": 14,
     "navigation_txt_case": "uppercase",
     "nav_h": 55,
     "navbarbdr": "rgba(0,0,0,0)",
@@ -60,6 +65,7 @@
     "nav_link_lbl4": "#ff0000",
     "nav_link_lbl5": "#ff0000",
     "nav_shadow": true,
+    "nav_mm_title_case": "none",
     "nav_mm_link_hv": "#f67280",
     "nav_dd_link": "#444",
     "nav_dd_link_bghv": "#fafafa",
@@ -67,6 +73,7 @@
     "subnav_color_shade": "darken",
     "sidebar_title": 15,
     "h_weight": "600",
+    "h_case": "none",
     "sidebar_links_hv": "#f77575",
     "footer_top_bg": "#fafafa",
     "footer_title": "#000",
@@ -92,6 +99,7 @@
     "annouance_pd": "style2",
     "topbar": false,
     "topbar_fullwidth": false,
+    "tphfont": 12,
     "main_header_fullwidth": false,
     "logosvg": "<svg version=\"1.1\" id=\"Layer_1\" xmlns=\"http:\/\/www.w3.org\/2000\/svg\" x=\"0px\" y=\"0px\" width=\"400px\" height=\"82px\" viewbox=\"0 0 400 82\" enable-background=\"new 0 0 400 82\" xmlns:xlink=\"http:\/\/www.w3.org\/1999\/xlink\" xml:space=\"preserve\">\n<text transform=\"matrix(1 0 0 1 69.7529 415.1504)\"><tspan x=\"0\" y=\"0\" font-family=\"'Poppins-ExtraBold'\" font-size=\"72\" letter-spacing=\"-3\">A<\/tspan><tspan x=\"50.544\" y=\"0\" font-family=\"'Poppins-ExtraBold'\" font-size=\"72\" letter-spacing=\"1\">V<\/tspan><tspan x=\"105.983\" y=\"0\" font-family=\"'Poppins-ExtraBold'\" font-size=\"72\" letter-spacing=\"3\">ONE<\/tspan><\/text>\n<g>\n\t<path d=\"M54.766,67.227H27.107L22.81,80.229H0L28.54,2.543h25.014l28.43,77.687h-22.92L54.766,67.227z M49.367,50.918\n\t\tl-8.375-25.345l-8.485,25.345H49.367z\"><\/path>\n\t<path d=\"M100.386,2.212l17.631,56.199l17.521-56.199h23.03l-26.667,78.018h-27.878L77.356,2.212H100.386z\"><\/path>\n\t<path d=\"M225.401,6.124c6.062,3.416,10.835,8.173,14.326,14.27c3.488,6.099,5.234,12.968,5.234,20.607\n\t\tc0,7.641-1.764,14.509-5.291,20.605c-3.527,6.099-8.318,10.854-14.381,14.27c-6.059,3.417-12.725,5.125-19.998,5.125\n\t\tc-7.272,0-13.959-1.708-20.057-5.125c-6.099-3.416-10.908-8.171-14.435-14.27c-3.527-6.097-5.288-12.965-5.288-20.605\n\t\tc0-7.64,1.761-14.509,5.288-20.607c3.527-6.097,8.336-10.854,14.435-14.27c6.098-3.416,12.784-5.125,20.057-5.125\n\t\tC212.637,0.999,219.342,2.708,225.401,6.124z M192.289,26.399c-3.159,3.564-4.741,8.43-4.741,14.602\n\t\tc0,6.023,1.582,10.836,4.741,14.435c3.157,3.601,7.491,5.399,13.003,5.399c5.435,0,9.733-1.799,12.893-5.399\n\t\tc3.156-3.599,4.738-8.411,4.738-14.435c0-6.172-1.563-11.037-4.684-14.602c-3.125-3.563-7.438-5.345-12.947-5.345\n\t\tC199.78,21.055,195.446,22.837,192.289,26.399z\"><\/path>\n\t<path d=\"M332.231,80.229h-21.707l-28.648-43.526v43.526h-21.711V2.322h21.711l28.648,44.077V2.322h21.707V80.229z\"><\/path>\n\t<path d=\"M371.462,19.513v12.893h25.232v16.419h-25.232v14.104H400v17.301h-50.249V2.212H400v17.301H371.462z\"><\/path>\n<\/g>\n<\/svg>",
     "logo": "shopify:\/\/shop_images\/footer-logo.png",
@@ -99,7 +107,7 @@
     "header_height": "70",
     "mobile_header_height": "50",
     "sticky_logo_width": "80",
-    "sticky_header_height": "70",
+    "sticky_header_height": "79",
     "header_ico": "#030505",
     "icon_size": 17,
     "my_account_icn": "at at-user-expand",
@@ -242,17 +250,15 @@
               "title": "Home",
               "url": "#",
               "newtab": false,
-              "mm_linklist": "demos",
+              "mm_linklist": "",
               "mmcolumns": 4,
               "imgcall": "bottom",
               "columnWidth": 50,
               "mmimgcolumns": 2,
               "imageTtl1": "",
               "imageurl": "",
-              "megamenu2_image": "shopify:\/\/shop_images\/1_225471fe-6c08-4029-bfb4-52e675c5eb1f.jpg",
               "imageTtl2": "",
               "Image2url": "https:\/\/avone-demo.myshopify.com\/?_ab=0&_fd=0&_sc=1&preview_theme_id=83490242620",
-              "megamenu3_image": "shopify:\/\/shop_images\/2_b8d4ebf6-934c-4431-abfe-aeb0109b5182.jpg",
               "imageTtl3": "",
               "Image3url": "https:\/\/avon-demo.myshopify.com\/?_ab=0&_fd=0&_sc=1&preview_theme_id=73322332227",
               "imageTtl4": "",
@@ -269,12 +275,11 @@
               "title": "Shop",
               "url": "#",
               "newtab": false,
-              "mm_linklist": "shop-1",
+              "mm_linklist": "",
               "mmcolumns": 4,
               "imgcall": "right",
               "columnWidth": 24,
               "mmimgcolumns": 1,
-              "megamenu1_image": "shopify:\/\/shop_images\/WOMXN.jpg",
               "imageTtl1": "FLAT 50% OFF ON WOMENS",
               "imageurl": "shopify:\/\/collections\/women",
               "imageTtl2": "",
@@ -295,7 +300,7 @@
               "title": "Features [label1]",
               "url": "#",
               "newtab": false,
-              "mm_linklist": "features",
+              "mm_linklist": "",
               "mmcolumns": 5,
               "imgcall": "right",
               "columnWidth": 50,
@@ -320,7 +325,7 @@
               "title": "<span style=\"color:#bf1616;\">NEW IN<\/span>",
               "url": "",
               "newtab": false,
-              "mm_linklist": "advance-menu",
+              "mm_linklist": "",
               "mmcolumns": 2,
               "collection1": "hot-collection",
               "collection2": "men",
@@ -346,7 +351,7 @@
             "settings": {
               "title": "Lookbook",
               "url": "",
-              "mm_linklist": "lookbook"
+              "mm_linklist": ""
             }
           },
           "1553256701490": {
@@ -354,7 +359,7 @@
             "settings": {
               "title": "Pages",
               "url": "",
-              "mm_linklist": "pages"
+              "mm_linklist": ""
             }
           },
           "1559992848977": {
@@ -362,7 +367,7 @@
             "settings": {
               "title": "Blog",
               "url": "#",
-              "mm_linklist": "blog"
+              "mm_linklist": ""
             }
           },
           "ff0e6f22-f740-4d49-9986-8cbc1de21b2e": {
@@ -370,7 +375,7 @@
             "settings": {
               "title": "Buy Now!",
               "url": "https:\/\/1.envato.market\/KdyYx",
-              "mm_linklist": "buy-now"
+              "mm_linklist": ""
             }
           }
         },
@@ -386,7 +391,7 @@
         ],
         "settings": {
           "menuarrow": false,
-          "menuAlign": "tc",
+          "menuAlign": "tl",
           "spnav": false,
           "mbmenu": "main-menu",
           "nm_label1": "New",
@@ -403,7 +408,6 @@
             "type": "custom",
             "settings": {
               "title": "",
-              "logo": "shopify:\/\/shop_images\/footer-logo.png",
               "logo-width": 100,
               "custom-text": "<p>55 Gallaxy Enque,<br>\n2568 steet, 23568 NY<\/p>\n<p><b>Phone:<\/b> (440) 000 000 0000<\/p>\n<p><b>Email:<\/b> <a href=\"mailto:sales@yousite.com\">sales@yousite.com<\/a><\/p><p><\/p>",
               "show_socials": true,
@@ -416,7 +420,7 @@
             "type": "menu",
             "settings": {
               "title": "INFORMATION",
-              "menulinks": "information",
+              "menulinks": "",
               "width": "wd20-md"
             }
           },
@@ -424,7 +428,7 @@
             "type": "menu",
             "settings": {
               "title": "QUICK SHOP",
-              "menulinks": "quick-shop",
+              "menulinks": "",
               "width": "wd20-md"
             }
           },
@@ -432,7 +436,7 @@
             "type": "menu",
             "settings": {
               "title": "CUSTOMER SERVICES",
-              "menulinks": "customer-service",
+              "menulinks": "",
               "width": "wd20-md"
             }
           },
@@ -477,7 +481,6 @@
               "color2": "#00646c",
               "title3": "White\/Black",
               "color3": "",
-              "image3": "shopify:\/\/shop_images\/White-Black_501ba5c3-86d5-4f37-99ea-a6671b3c4ea3.jpg",
               "title4": "Sage",
               "color4": "#8da29a",
               "title5": "Olive Green",
@@ -490,13 +493,10 @@
               "color8": "#df974d",
               "title9": "Black\/Pink",
               "color9": "",
-              "image9": "shopify:\/\/shop_images\/pink-black.jpg",
               "title10": "Black\/Grey",
               "color10": "",
-              "image10": "shopify:\/\/shop_images\/grey-black.jpg",
               "title11": "Blue\/Red",
               "color11": "",
-              "image11": "shopify:\/\/shop_images\/blue-red.jpg",
               "title12": "",
               "color12": "",
               "title13": "",
