--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -129,8 +129,8 @@
     "gift_product": "gift-wrapping",
     "coupon": true,
     "cd_bdr": "#dddddd",
-    "grid_space": 20,
-    "primg_ratio": "130",
+    "grid_space": 22,
+    "primg_ratio": "80",
     "primg_size": "cover",
     "color_type": "color",
     "vr_bg_position": "50% 50%",
@@ -158,14 +158,17 @@
     "thumbnail_pos": "bottom",
     "askaboutproduct": true,
     "shippingpage": "delivary-and-returns",
+    "sizechart_link": false,
     "sizechart_page": "size-chart",
     "show_share_buttons_single": false,
     "sharing_lbl": "Share:",
-    "sw_type": "vrimage",
-    "sw_size": "medium",
-    "var_style": true,
-    "swatch_bg": "#eeeeee",
-    "ac_swatch_bg": "#111",
+    "sw_type": "color",
+    "sw_size": "small",
+    "swbdr": 35,
+    "swsold": false,
+    "var_style": false,
+    "swatch_bg": "#ffffff",
+    "ac_swatch_bg": "#000000",
     "ac_swatch_txt": "#ffffff",
     "ac_swatch_bdr": "#000000",
     "spr_navigation": true,
