拉下包装处理

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -15,6 +15,7 @@
     "favicon_retina": "shopify:\/\/shop_images\/favicon-152.png",
     "hm_keywords": "Best Shopify Theme, Fashion theme, Electronics",
     "hm_author": "Sanjay Khunt",
+    "dynamicTtl": false,
     "free_ship": "free-shipping",
     "free_ship_msg": "Spent $ more for free shipping",
     "got_free_ship": "You have got <b>FREE SHIPPING<\/b>",
@@ -111,11 +112,12 @@
     "main_header_fullwidth": false,
     "logosvg": "",
     "logo": "shopify:\/\/shop_images\/logo_2f39a5a2-1fb1-4269-a0dc-b787c511a865.png",
-    "logo_reversal": "shopify:\/\/shop_images\/2E9802AA-AFF0-4B6B-A17B-8F98E2998FCA.png",
-    "logo_width": "90",
+    "logo_reversal": "shopify:\/\/shop_images\/logo_624c236d-be86-4c8f-b763-206f22dceab3.png",
+    "logo_width": "130",
     "header_height": "77",
     "mobile_header_height": "50",
-    "sticky_logo_width": "80",
+    "sticky_logo_width": "130",
+    "sticky_logo_height": "70",
     "sticky_header_height": "79",
     "header_ico": "#030505",
     "icon_size": 17,
