--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -282,14 +282,14 @@
               "text_sub1": "Two models to choose, either one to try",
               "text_link1": "Explore all products",
               "url_link1": "shopify:\/\/products\/ec-1-st-1",
-              "img_url2": "shopify:\/\/shop_images\/02_c6d1e217-2ca7-4f1a-8304-c564ef6a700b.webp",
-              "text_main2": "We've got you and your bike covered",
-              "text_sub2": "Mars",
+              "img_url2": "shopify:\/\/shop_images\/Heybie_EC1_ST_1_png.jpg",
+              "text_main2": "HEYBIKE EC 1-ST",
+              "text_sub2": "Bring an ideal uran life",
               "text_link2": "",
-              "url_link2": "",
-              "img_url3": "shopify:\/\/shop_images\/023.webp",
-              "text_main3": "We've got you and your bike covered",
-              "text_sub3": "SERVICES",
+              "url_link2": "shopify:\/\/products\/ec-1-st-1",
+              "img_url3": "shopify:\/\/shop_images\/Heybie_EC1_ST_2_png.jpg",
+              "text_main3": "HEYBIKE EC 1",
+              "text_sub3": "Bring an ideal uran life",
               "text_link3": "",
               "url_link3": "shopify:\/\/collections\/electric-bike"
             }
