--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -278,20 +278,20 @@
               "title": "E-Bike",
               "url": "shopify:\/\/collections\/electric-bike",
               "mm_linklist": "electric-bike",
-              "text_main1": "We've got you and your bike covered",
+              "text_main1": "Bring an ideal uran life!",
               "text_sub1": "Two models to choose, either one to try",
-              "text_link1": "Explore all products",
-              "url_link1": "shopify:\/\/products\/ec-1-st-1",
+              "text_link1": "View All",
+              "url_link1": "shopify:\/\/collections\/electric-bike",
               "img_url2": "shopify:\/\/shop_images\/Heybie_EC1_ST_1_png.jpg",
-              "text_main2": "HEYBIKE EC 1-ST",
-              "text_sub2": "Bring an ideal uran life",
+              "text_main2": "EC 1-ST",
+              "text_sub2": "Suitable for female riders more",
               "text_link2": "",
               "url_link2": "shopify:\/\/products\/ec-1-st-1",
               "img_url3": "shopify:\/\/shop_images\/Heybie_EC1_ST_2_png.jpg",
-              "text_main3": "HEYBIKE EC 1",
-              "text_sub3": "Bring an ideal uran life",
+              "text_main3": "EC 1",
+              "text_sub3": "Meet your needs for commuting",
               "text_link3": "",
-              "url_link3": "shopify:\/\/collections\/electric-bike"
+              "url_link3": "shopify:\/\/products\/heybike-ec-1"
             }
           },
           "eaf15dca-1822-4a37-8c94-bd24e939b788": {
@@ -432,10 +432,10 @@
             "type": "legal",
             "settings": {
               "logo_img": "shopify:\/\/shop_images\/logo-white.png",
-              "text_link1": "Refund Policy",
-              "link_url1": "shopify:\/\/pages\/return",
-              "text_link2": "Terms of Service",
-              "link_url2": "shopify:\/\/pages\/terms-of-service"
+              "text_link1": "",
+              "link_url1": "",
+              "text_link2": "",
+              "link_url2": ""
             }
           },
           "0fbd70ba-a5ec-4f78-b500-98fa94c457c2": {
