--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -99,14 +99,14 @@
     "color_borders": "#eeeeee",
     "announcement": true,
     "announcement_mb": false,
-    "announcement_txt": "<b>BLAZING FAST !<\/b> PURCHASE THIS INCREDIBLE THEME NOW <b> FOR THE SUCCESS OF YOUR BUSINESS !<\/b>",
-    "announcement_link": "https:\/\/1.envato.market\/KdyYx",
+    "announcement_txt": "<b>New Arrivaling ! Don't Miss The First Gift of Summer !<\/b>",
+    "announcement_link": "shopify:\/\/collections\/electric-bike",
     "annouance_bg": "#121212",
     "annouance_fs": 11,
     "annouance_pd": "style2",
     "topbar": false,
     "topbar_fullwidth": false,
-    "leftTxt": "(+49)0512 2388 6783, sales@heybike.com",
+    "leftTxt": "(+49)0512 2388 6783, sales.uk@heybike.com",
     "centerTxt": "FREE SHIPPING on order above £99",
     "tphfont": 12,
     "main_header_fullwidth": false,
@@ -116,6 +116,7 @@
     "logo_width": "135",
     "header_height": "80",
     "mobile_header_height": "50",
+    "hdTxt-block": "Welcome to our store. Signup now and get 5% off.",
     "sticky_logo_width": "135",
     "sticky_logo_height": "70",
     "sticky_header_height": "80",
@@ -275,7 +276,7 @@
           "86aca260-e282-40f4-97fb-c8bb57b7ef06": {
             "type": "megamenuHb",
             "settings": {
-              "title": "E-Bike",
+              "title": "E-Bikes",
               "url": "shopify:\/\/collections\/electric-bike",
               "mm_linklist": "electric-bike",
               "text_main1": "Bring an ideal uran life!",
@@ -284,7 +285,7 @@
               "url_link1": "shopify:\/\/collections\/electric-bike",
               "img_url2": "shopify:\/\/shop_images\/Heybie_EC1_ST_1_png.jpg",
               "text_main2": "EC 1-ST",
-              "text_sub2": "Suitable for female riders more",
+              "text_sub2": "Preferred by female cyclists",
               "text_link2": "",
               "url_link2": "shopify:\/\/products\/ec-1-st-1",
               "img_url3": "shopify:\/\/shop_images\/Heybie_EC1_ST_2_png.jpg",
@@ -298,19 +299,19 @@
             "type": "megamenuHb",
             "settings": {
               "title": "Equipment",
-              "url": "shopify:\/\/collections\/equipment",
+              "url": "",
               "mm_linklist": "accessories",
-              "text_main1": "We've got you and your bike covered",
-              "text_sub1": "SERVICES",
-              "text_link1": "Explore all products",
+              "text_main1": "",
+              "text_sub1": "",
+              "text_link1": "",
               "url_link1": "",
-              "text_main2": "We've got you and your bike covered",
-              "text_sub2": "SERVICES",
-              "text_link2": "Explore all products",
+              "text_main2": "",
+              "text_sub2": "",
+              "text_link2": "",
               "url_link2": "",
-              "text_main3": "We've got you and your bike covered",
-              "text_sub3": "SERVICES",
-              "text_link3": "Explore all products",
+              "text_main3": "",
+              "text_sub3": "",
+              "text_link3": "",
               "url_link3": ""
             }
           },
