移动端首页处理完成

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -11,10 +11,10 @@
     "en_searchwords": true,
     "show_product_review": true,
     "show_reviewgrid": true,
-    "favicon": "shopify:\/\/shop_images\/favicon.png",
-    "favicon_retina": "shopify:\/\/shop_images\/favicon-152.png",
-    "hm_keywords": "Best Shopify Theme, Fashion theme, Electronics",
-    "hm_author": "Sanjay Khunt",
+    "favicon": "shopify:\/\/shop_images\/icon32.png",
+    "favicon_retina": "shopify:\/\/shop_images\/icon132.png",
+    "hm_keywords": "Heybike: Best Affordable Electric Bikes for Adults",
+    "hm_author": "Heybike.UK",
     "dynamicTtl": false,
     "free_ship": "free-shipping",
     "free_ship_msg": "Spent $ more for free shipping",
