--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -93,7 +93,7 @@
     "newsletter_btn": "#000",
     "font-style": "600",
     "mob_browser": "#000",
-    "scroll_icon_colors": "#f77575",
+    "scroll_icon_colors": "#f6be00",
     "text_link": "#444",
     "text_link_hv": "#aaaaaa",
     "color_borders": "#eeeeee",
@@ -296,8 +296,17 @@
               "url_link3": "shopify:\/\/products\/heybike-ec-1"
             }
           },
+          "fdae2dd8-4778-4ee1-b020-8db5b864a945": {
+            "type": "dropdown",
+            "settings": {
+              "title": "Equipment",
+              "url": "shopify:\/\/collections\/equipment",
+              "mm_linklist": "accessories"
+            }
+          },
           "eaf15dca-1822-4a37-8c94-bd24e939b788": {
             "type": "megamenuHb",
+            "disabled": true,
             "settings": {
               "title": "Equipment",
               "url": "shopify:\/\/collections\/equipment",
@@ -319,7 +328,7 @@
               "url_link3": "shopify:\/\/collections\/equipment"
             }
           },
-          "23b6094a-ec02-4808-bac4-8dbb5fed7f32": {
+          "8ce78ede-59e2-430e-af8a-0767a9b36fcc": {
             "type": "dropdown",
             "settings": {
               "title": "Support",
@@ -355,8 +364,9 @@
         },
         "block_order": [
           "86aca260-e282-40f4-97fb-c8bb57b7ef06",
+          "fdae2dd8-4778-4ee1-b020-8db5b864a945",
           "eaf15dca-1822-4a37-8c94-bd24e939b788",
-          "23b6094a-ec02-4808-bac4-8dbb5fed7f32",
+          "8ce78ede-59e2-430e-af8a-0767a9b36fcc",
           "1559988240897",
           "1559992848977",
           "ff0e6f22-f740-4d49-9986-8cbc1de21b2e"
